@@ -6,6 +6,7 @@ import com.mycompany.myapp.domain.Product;
 import com.mycompany.myapp.domain.User;
 import com.mycompany.myapp.repository.AuthorityRepository;
 import com.mycompany.myapp.repository.CategoryRepository;
+import com.mycompany.myapp.repository.CustomerRepository;
 import com.mycompany.myapp.repository.ProductRepository;
 import com.mycompany.myapp.repository.UserRepository;
 import com.mycompany.myapp.security.AuthoritiesConstants;
@@ -17,7 +18,7 @@ import java.net.URL;
 import java.net.URLConnection;
 import java.util.*;
 import org.apache.poi.ss.usermodel.*;
-import org.apache.poi.xssf.usermodel.XSSFWorkbook;
+import org.apache.poi.xssf.usermodel.*;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -36,19 +37,22 @@ public class FileImportService {
     private final PasswordEncoder passwordEncoder;
     private final AuthorityRepository authorityRepository;
     private final CategoryRepository categoryRepository;
+    private final CustomerRepository customerRepository;
 
     public FileImportService(
         ProductRepository productRepository,
         UserRepository userRepository,
         PasswordEncoder passwordEncoder,
         AuthorityRepository authorityRepository,
-        CategoryRepository categoryRepository
+        CategoryRepository categoryRepository,
+        CustomerRepository customerRepository
     ) {
         this.productRepository = productRepository;
         this.userRepository = userRepository;
         this.passwordEncoder = passwordEncoder;
         this.authorityRepository = authorityRepository;
         this.categoryRepository = categoryRepository;
+        this.customerRepository = customerRepository;
     }
 
     // Existing implementation methods
@@ -85,28 +89,36 @@ public class FileImportService {
             List<Product> productsToSave = new ArrayList<>();
             int rowNumber = 0;
 
+            // --- Get embedded images from Excel ---
+            Map<String, byte[]> imageMap = extractImagesFromExcel(workbook, sheet);
+            log.debug("Found {} embedded images in Excel", imageMap.size());
+
             // --- Optimization: Pre-load categories ---
             Map<String, Category> categoryCacheByName = new HashMap<>();
             Map<String, Category> categoryCacheBySlug = new HashMap<>();
-            categoryRepository.findAll().forEach(cat -> {
-                if (cat.getName() != null) {
-                    categoryCacheByName.put(cat.getName().trim(), cat);
-                }
-                if (cat.getSlug() != null) {
-                    categoryCacheBySlug.put(cat.getSlug().trim(), cat);
-                }
-            });
+            categoryRepository
+                .findAll()
+                .forEach(cat -> {
+                    if (cat.getName() != null) {
+                        categoryCacheByName.put(cat.getName().trim(), cat);
+                    }
+                    if (cat.getSlug() != null) {
+                        categoryCacheBySlug.put(cat.getSlug().trim(), cat);
+                    }
+                });
 
             Category defaultCategory = categoryCacheBySlug.get("chua-phan-loai");
             if (defaultCategory == null) {
-                defaultCategory = categoryRepository.findBySlug("chua-phan-loai").orElseGet(() -> {
-                    Category newCat = new Category();
-                    newCat.setName("Chưa phân loại");
-                    newCat.setSlug("chua-phan-loai");
-                    return categoryRepository.save(newCat);
-                });
+                defaultCategory = categoryRepository
+                    .findBySlug("chua-phan-loai")
+                    .orElseGet(() -> {
+                        Category newCat = new Category();
+                        newCat.setName("Chưa phân loại");
+                        newCat.setSlug("chua-phan-loai");
+                        return categoryRepository.save(newCat);
+                    });
                 categoryCacheBySlug.put("chua-phan-loai", defaultCategory);
-                if(defaultCategory.getName() != null) {
+                if (defaultCategory.getName() != null) {
                     categoryCacheByName.put(defaultCategory.getName().trim(), defaultCategory);
                 }
             }
@@ -149,11 +161,28 @@ public class FileImportService {
                     }
 
                     String imageUrl = getCellValue(currentRow.getCell(5));
-                    product.setImageUrl(
-                        (imageUrl == null || imageUrl.trim().isEmpty())
-                            ? "https://via.placeholder.com/300x300?text=No+Image"
-                            : imageUrl.trim()
-                    );
+
+                    // Check if there's an embedded image for this row
+                    String imageKey = sheet.getSheetName() + "_" + rowNumber;
+                    byte[] imageData = imageMap.get(imageKey);
+
+                    if (imageData != null && imageData.length > 0) {
+                        // Image found in Excel - save as binary
+                        product.setImageData(imageData);
+                        // Detect content type based on image signature
+                        String contentType = detectImageContentType(imageData);
+                        product.setImageContentType(contentType);
+                        // Generate data URL for preview
+                        String base64 = java.util.Base64.getEncoder().encodeToString(imageData);
+                        product.setImageUrl("data:" + contentType + ";base64," + base64);
+                        log.debug("Loaded embedded image for row {}, size: {} bytes", rowNumber, imageData.length);
+                    } else if (imageUrl != null && !imageUrl.trim().isEmpty()) {
+                        // No embedded image - use URL from cell
+                        product.setImageUrl(imageUrl.trim());
+                    } else {
+                        // No image at all - use placeholder
+                        product.setImageUrl("https://via.placeholder.com/300x300?text=No+Image");
+                    }
 
                     // --- Use category cache ---
                     String categoryInput = getCellValue(currentRow.getCell(7));
@@ -170,9 +199,7 @@ public class FileImportService {
 
                         if (category == null) {
                             throw new IllegalArgumentException(
-                                "Không tìm thấy danh mục '" +
-                                categoryInput +
-                                "'. Vui lòng kiểm tra lại tên danh mục hoặc tạo danh mục mới."
+                                "Không tìm thấy danh mục '" + categoryInput + "'. Vui lòng kiểm tra lại tên danh mục hoặc tạo danh mục mới."
                             );
                         }
                     }
@@ -267,7 +294,8 @@ public class FileImportService {
 
             Authority userAuthority = authorityRepository
                 .findById(AuthoritiesConstants.USER)
-                .orElseThrow(() -> new BadRequestAlertException("Không tìm thấy quyền USER mặc định", "fileImport", "userAuthorityNotFound"));
+                .orElseThrow(() -> new BadRequestAlertException("Không tìm thấy quyền USER mặc định", "fileImport", "userAuthorityNotFound")
+                );
 
             while (rows.hasNext()) {
                 Row currentRow = rows.next();
@@ -276,86 +304,217 @@ public class FileImportService {
                     continue;
                 }
 
-                User user = new User();
-                Cell idCell = currentRow.getCell(0);
-                if (idCell != null && idCell.getCellType() == CellType.NUMERIC) {
-                    user.setId((long) idCell.getNumericCellValue());
-                }
-
                 try {
-                    String password = getCellValue(currentRow.getCell(2));
-                    if (password == null || password.isBlank()) {
-                        throw new IllegalArgumentException("Mật khẩu không được để trống");
+                    // Đọc dữ liệu từ các cột (theo thứ tự: Phone, FirstName, LastName, Email)
+                    String phoneNumber = getCellValue(currentRow.getCell(0));
+                    String firstName = getCellValue(currentRow.getCell(1));
+                    String lastName = getCellValue(currentRow.getCell(2));
+                    String email = getCellValue(currentRow.getCell(3));
+
+                    // Validate: Phải có ít nhất SĐT hoặc Email
+                    if ((phoneNumber == null || phoneNumber.trim().isEmpty()) && (email == null || email.trim().isEmpty())) {
+                        throw new IllegalArgumentException("Phải có ít nhất số điện thoại hoặc email");
                     }
-                    user.setPassword(passwordEncoder.encode(password));
 
-                    user.setFirstName(getCellValue(currentRow.getCell(3)));
-                    user.setLastName(getCellValue(currentRow.getCell(4)));
+                    // Tìm user theo SĐT hoặc Email
+                    User user = null;
+                    boolean isUpdate = false;
 
-                    String email = getCellValue(currentRow.getCell(5));
-                    if (email == null || email.isBlank()) {
-                        throw new IllegalArgumentException("Email không được để trống");
+                    // Ưu tiên tìm theo số điện thoại
+                    if (phoneNumber != null && !phoneNumber.trim().isEmpty()) {
+                        Optional<User> existingByPhone = userRepository.findOneByPhone(phoneNumber.trim());
+                        if (existingByPhone.isPresent()) {
+                            user = existingByPhone.get();
+                            isUpdate = true;
+                        }
                     }
-                    user.setEmail(email.toLowerCase());
 
-                    user.setPhone(getCellValue(currentRow.getCell(6)));
-                    user.setActivated(true);
-                    user.setAuthority(userAuthority);
+                    // Nếu không tìm thấy theo SĐT, tìm theo email
+                    if (user == null && email != null && !email.trim().isEmpty()) {
+                        Optional<User> existingByEmail = userRepository.findOneByEmailIgnoreCase(email.trim());
+                        if (existingByEmail.isPresent()) {
+                            user = existingByEmail.get();
+                            isUpdate = true;
+                        }
+                    }
+
+                    // Nếu không tìm thấy, tạo mới
+                    if (user == null) {
+                        user = new User();
+                        user.setPassword(passwordEncoder.encode("123456"));
+                        user.setActivated(true);
+                        user.setLangKey("vi");
+                        user.setAuthority(userAuthority);
+                        log.info("Creating new user: {}", phoneNumber);
+                    }
+
+                    // Cập nhật thông tin
+                    if (firstName != null && !firstName.trim().isEmpty()) {
+                        user.setFirstName(firstName.trim());
+                    }
+
+                    if (lastName != null && !lastName.trim().isEmpty()) {
+                        user.setLastName(lastName.trim());
+                    }
+
+                    if (email != null && !email.trim().isEmpty()) {
+                        String emailLower = email.trim().toLowerCase();
+                        // Kiểm tra email đã tồn tại chưa (nếu không phải của user hiện tại)
+                        Optional<User> userWithEmail = userRepository.findOneByEmailIgnoreCase(emailLower);
+                        if (userWithEmail.isEmpty() || (user.getId() != null && userWithEmail.get().getId().equals(user.getId()))) {
+                            user.setEmail(emailLower);
+                        } else {
+                            log.warn("Dòng {}: Email {} đã tồn tại, bỏ qua", rowNumber + 1, emailLower);
+                        }
+                    }
+
+                    if (phoneNumber != null && !phoneNumber.trim().isEmpty()) {
+                        String phoneTrim = phoneNumber.trim();
+                        // Kiểm tra SĐT đã tồn tại chưa (nếu không phải của user hiện tại)
+                        Optional<User> userWithPhone = userRepository.findOneByPhone(phoneTrim);
+                        if (userWithPhone.isEmpty() || (user.getId() != null && userWithPhone.get().getId().equals(user.getId()))) {
+                            user.setPhone(phoneTrim);
+                        } else {
+                            log.warn("Dòng {}: Số điện thoại {} đã tồn tại, bỏ qua", rowNumber + 1, phoneTrim);
+                        }
+                    }
+
+                    usersToSave.add(user);
+                    log.info("Processed user at row {}: {} - {}", rowNumber + 1, isUpdate ? "UPDATE" : "CREATE", user.getEmail());
                 } catch (Exception e) {
+                    log.error("Error at row {}: {}", rowNumber + 1, e.getMessage());
                     throw new BadRequestAlertException(
                         "Lỗi đọc dữ liệu người dùng tại dòng " + (rowNumber + 1) + ": " + e.getMessage(),
                         "fileImport",
                         "dataReadError"
                     );
                 }
-
-                if (user.getId() != null) {
-                    userRepository
-                        .findById(user.getId())
-                        .ifPresent(existingUser -> {
-                            user.setCreatedBy(existingUser.getCreatedBy());
-                            user.setCreatedDate(existingUser.getCreatedDate());
-                        });
-                } else {
-                    // Sync with UserService: remove non-activated user with same email or phone
-                    final String userEmail = user.getEmail();
-                    if (userEmail != null && !userEmail.isBlank()) {
-                        userRepository
-                            .findOneByEmailIgnoreCase(userEmail)
-                            .ifPresent(existingUser -> {
-                                if (existingUser.isActivated()) {
-                                    throw new BadRequestAlertException(
-                                        "Email '" + userEmail + "' đã tồn tại và đã được kích hoạt.",
-                                        "fileImport",
-                                        "emailExists"
-                                    );
-                                }
-                                userRepository.delete(existingUser);
-                                userRepository.flush();
-                            });
-                    }
-
-                    final String userPhone = user.getPhone();
-                    if (userPhone != null && !userPhone.isBlank()) {
-                        userRepository
-                            .findOneByPhone(userPhone)
-                            .ifPresent(existingUser -> {
-                                if (existingUser.isActivated()) {
-                                    throw new BadRequestAlertException(
-                                        "Số điện thoại '" + userPhone + "' đã tồn tại và đã được kích hoạt.",
-                                        "fileImport",
-                                        "phoneExists"
-                                    );
-                                }
-                                userRepository.delete(existingUser);
-                                userRepository.flush();
-                            });
-                    }
-                }
-                usersToSave.add(user);
                 rowNumber++;
             }
+
             userRepository.saveAll(usersToSave);
+        }
+    }
+
+    /**
+     * Import khách hàng mua offline
+     * Format: SĐT | Tên | Sản phẩm đã mua
+     */
+    public void importCustomers(MultipartFile file) throws Exception {
+        if (!file.getOriginalFilename().endsWith(".xlsx")) {
+            throw new BadRequestAlertException("Chỉ chấp nhận file Excel định dạng .xlsx", "fileImport", "invalidFileFormat");
+        }
+        try (InputStream inputStream = file.getInputStream()) {
+            processCustomerExcel(inputStream);
+        } catch (Exception e) {
+            log.error("Lỗi khi import khách hàng từ file: {}", e.getMessage());
+            throw e;
+        }
+    }
+
+    private void processCustomerExcel(InputStream inputStream) throws Exception {
+        try (Workbook workbook = new XSSFWorkbook(inputStream)) {
+            Sheet sheet = workbook.getSheetAt(0);
+            Iterator<Row> rows = sheet.iterator();
+
+            List<com.mycompany.myapp.domain.Customer> customersToSave = new ArrayList<>();
+            int rowNumber = 0;
+
+            while (rows.hasNext()) {
+                Row currentRow = rows.next();
+                if (rowNumber == 0) {
+                    rowNumber++;
+                    continue; // Skip header
+                }
+
+                try {
+                    // Đọc: SĐT | Tên | Sản phẩm đã mua | Ngày mua hàng (TẤT CẢ BẮT BUỘC)
+                    String phone = getCellValue(currentRow.getCell(0));
+                    String fullName = getCellValue(currentRow.getCell(1));
+                    String productsPurchased = getCellValue(currentRow.getCell(2));
+                    Cell purchaseDateCell = currentRow.getCell(3);
+
+                    // Validate: TẤT CẢ 4 CỘT ĐỀU BẮT BUỘC
+                    if (phone == null || phone.trim().isEmpty()) {
+                        throw new IllegalArgumentException("Cột A (SĐT) không được để trống");
+                    }
+
+                    if (fullName == null || fullName.trim().isEmpty()) {
+                        throw new IllegalArgumentException("Cột B (Tên) không được để trống");
+                    }
+
+                    if (productsPurchased == null || productsPurchased.trim().isEmpty()) {
+                        throw new IllegalArgumentException("Cột C (Sản phẩm đã mua) không được để trống");
+                    }
+
+                    if (purchaseDateCell == null) {
+                        throw new IllegalArgumentException("Cột D (Ngày mua hàng) không được để trống");
+                    }
+
+                    // Parse ngày mua hàng (BẮT BUỘC)
+                    java.time.Instant purchaseDate = null;
+                    if (purchaseDateCell.getCellType() == CellType.NUMERIC && DateUtil.isCellDateFormatted(purchaseDateCell)) {
+                        // Excel date format
+                        purchaseDate = purchaseDateCell.getDateCellValue().toInstant();
+                    } else {
+                        String dateStr = getCellValue(purchaseDateCell);
+                        if (dateStr == null || dateStr.trim().isEmpty()) {
+                            throw new IllegalArgumentException("Cột D (Ngày mua hàng) không được để trống");
+                        }
+                        try {
+                            // Parse dd/MM/yyyy
+                            java.time.format.DateTimeFormatter formatter = java.time.format.DateTimeFormatter.ofPattern("dd/MM/yyyy");
+                            java.time.LocalDate localDate = java.time.LocalDate.parse(dateStr.trim(), formatter);
+                            purchaseDate = localDate.atStartOfDay(java.time.ZoneId.systemDefault()).toInstant();
+                        } catch (Exception e) {
+                            throw new IllegalArgumentException(
+                                "Cột D (Ngày mua hàng) sai định dạng. Vui lòng dùng format: dd/MM/yyyy (VD: 31/12/2025)"
+                            );
+                        }
+                    }
+
+                    // Tìm customer theo SĐT
+                    com.mycompany.myapp.domain.Customer customer = customerRepository.findOneByPhone(phone.trim()).orElse(null);
+
+                    if (customer == null) {
+                        // Tạo mới
+                        customer = new com.mycompany.myapp.domain.Customer();
+                        customer.setPhone(phone.trim());
+                        customer.setFullName(fullName.trim());
+                        customer.setProductsPurchased(productsPurchased.trim());
+                        customer.setLastPurchaseDate(purchaseDate);
+                        log.info("Tạo mới khách hàng: {} - Ngày mua: {}", phone, purchaseDate);
+                    } else {
+                        // Cập nhật
+                        customer.setFullName(fullName.trim());
+
+                        // Append sản phẩm mới vào danh sách cũ
+                        String existingProducts = customer.getProductsPurchased();
+                        if (existingProducts != null && !existingProducts.isEmpty()) {
+                            customer.setProductsPurchased(existingProducts + ", " + productsPurchased.trim());
+                        } else {
+                            customer.setProductsPurchased(productsPurchased.trim());
+                        }
+
+                        // Cập nhật ngày mua gần nhất
+                        customer.setLastPurchaseDate(purchaseDate);
+                        log.info("Cập nhật khách hàng: {} - Ngày mua: {}", phone, purchaseDate);
+                    }
+
+                    customersToSave.add(customer);
+                } catch (Exception e) {
+                    log.error("Lỗi tại dòng {}: {}", rowNumber + 1, e.getMessage());
+                    throw new BadRequestAlertException(
+                        "Lỗi đọc dữ liệu khách hàng tại dòng " + (rowNumber + 1) + ": " + e.getMessage(),
+                        "fileImport",
+                        "dataReadError"
+                    );
+                }
+                rowNumber++;
+            }
+
+            customerRepository.saveAll(customersToSave);
+            log.info("Import thành công {} khách hàng", customersToSave.size());
         }
     }
 
@@ -372,5 +531,95 @@ public class FileImportService {
         } else {
             return null;
         }
+    }
+
+    /**
+     * Extract embedded images from Excel file
+     * Returns a map of "sheetName_rowIndex" -> imageData
+     */
+    private Map<String, byte[]> extractImagesFromExcel(Workbook workbook, Sheet sheet) {
+        Map<String, byte[]> imageMap = new HashMap<>();
+
+        try {
+            if (workbook instanceof XSSFWorkbook) {
+                XSSFWorkbook xssfWorkbook = (XSSFWorkbook) workbook;
+                XSSFSheet xssfSheet = (XSSFSheet) sheet;
+
+                // Get drawing patriarch (contains all shapes including images)
+                XSSFDrawing drawing = xssfSheet.getDrawingPatriarch();
+                if (drawing != null) {
+                    List<XSSFShape> shapes = drawing.getShapes();
+                    for (XSSFShape shape : shapes) {
+                        if (shape instanceof XSSFPicture) {
+                            XSSFPicture picture = (XSSFPicture) shape;
+                            XSSFClientAnchor anchor = (XSSFClientAnchor) picture.getAnchor();
+
+                            // Get row index where image is located
+                            int row1 = anchor.getRow1();
+
+                            // Get image data
+                            XSSFPictureData pictureData = picture.getPictureData();
+                            byte[] imageData = pictureData.getData();
+
+                            // Store with key: sheetName_rowIndex
+                            String key = sheet.getSheetName() + "_" + row1;
+                            imageMap.put(key, imageData);
+
+                            log.debug("Found image at row {}, size: {} bytes, type: {}", row1, imageData.length, pictureData.getMimeType());
+                        }
+                    }
+                }
+            }
+        } catch (Exception e) {
+            log.warn("Could not extract images from Excel: {}", e.getMessage());
+        }
+
+        return imageMap;
+    }
+
+    /**
+     * Detect image content type from byte array signature
+     */
+    private String detectImageContentType(byte[] imageData) {
+        if (imageData == null || imageData.length < 4) {
+            return "image/jpeg"; // Default
+        }
+
+        // Check PNG signature: 89 50 4E 47
+        if (imageData[0] == (byte) 0x89 && imageData[1] == (byte) 0x50 && imageData[2] == (byte) 0x4E && imageData[3] == (byte) 0x47) {
+            return "image/png";
+        }
+
+        // Check JPEG signature: FF D8 FF
+        if (imageData[0] == (byte) 0xFF && imageData[1] == (byte) 0xD8 && imageData[2] == (byte) 0xFF) {
+            return "image/jpeg";
+        }
+
+        // Check GIF signature: 47 49 46 38
+        if (imageData[0] == (byte) 0x47 && imageData[1] == (byte) 0x49 && imageData[2] == (byte) 0x46 && imageData[3] == (byte) 0x38) {
+            return "image/gif";
+        }
+
+        // Check BMP signature: 42 4D
+        if (imageData[0] == (byte) 0x42 && imageData[1] == (byte) 0x4D) {
+            return "image/bmp";
+        }
+
+        // Check WebP signature: 52 49 46 46 ... 57 45 42 50
+        if (
+            imageData.length >= 12 &&
+            imageData[0] == (byte) 0x52 &&
+            imageData[1] == (byte) 0x49 &&
+            imageData[2] == (byte) 0x46 &&
+            imageData[3] == (byte) 0x46 &&
+            imageData[8] == (byte) 0x57 &&
+            imageData[9] == (byte) 0x45 &&
+            imageData[10] == (byte) 0x42 &&
+            imageData[11] == (byte) 0x50
+        ) {
+            return "image/webp";
+        }
+
+        return "image/jpeg"; // Default fallback
     }
 }
